src/style/scoreboard.module.scss
@import './variables';

$borderThick: 2px solid $lightBlue;
$borderThin: 1px solid $lightBlue;

.scoreboard {
  width: 100%;
  height: 100%;
  background: rgba(255, 255, 255, 0.5);
  border-radius: 5px;
  text-align: center;

  >.container {
    position: relative;
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    overflow: hidden;

    >.radelciWrapper {
      width: 100%;
      display: flex;
      flex-direction: row;

      border-bottom: $borderThin;

      >.radelci {
        position: relative;
        width: 100%;
        padding: 0.5em 0.1em;

        // Maybe a slightly dirty trick to display vertical borders, but
        //  the Scrollbars component adds additional width to the .pointsWrapper element,
        //    making the borders unaligned if added to each "cell" in the scoreboard seperately
        &::before {
          content: '';
          position: absolute;
          left: 0;
          top: 0;
          width: 100%;
          height: 100vh;

          border-right: $borderThick;
        }

        &:last-child {
          &::before {
            border: none;
          }
        }
        
        >svg { // FontAwesomeIcon returns svg
          padding: 0 2px;

          &:last-child {
            margin: 0;
          }
        }
      }
    }

    >.namesWrapper {
      width: 100%;
      display: flex;
      flex-direction: row;
      align-items: stretch; // In case any of the names are multi-line

      border-bottom: $borderThick;

      >.name {
        width: 100%;
        padding: 0.5em 0.1em;
        font-family: $roboto;
        font-size: 1.2em;

        // Vertically center name
        display: flex;
        justify-content: center;
        align-items: center;

        &:last-child {
          border: none;
        }
      }
    }

    .pointsWrapper {
      width: 100%;
      display: flex;
      flex-direction: row;
      height: 100%;

      >.points {
        width: 100%;
        height: 100%;

        >.point {
          width: 100%;
          font-family: $roboto;
          font-size: 1.2em;
          padding: 0.2em 0;

          border-bottom: $borderThin;

          &:first-child {
            padding-top: 0.2em;
          }

          &:last-child {
            border: none;
          }
        }
      }
    }

    >.sumsWrapper {
      width: 100%;
      display: flex;
      flex-direction: row;
      
      border-top: $borderThick;

      >.sum {
        width: 100%;
        font-family: $roboto;
        font-size: 1.5em;
        padding: 0.2em 0;
      }
    }
  }
}

